tests/snapshot/error/source_locations/class/fields/init_call_with_constructor.js
// Constructor, so source location for fields init call is the start of the constructor
class C {
  field = 1 + 2n;

  constructor() {}
}

new C();